# FixupQtQuick

./: CMakeLists.txt  License.txt  Readme.md
cmake/: plugintools.cmake
cpack/: WixLicense.txt  WixPatch.xml
src/: main.cc  main.qml  main.qrc  qt.conf
